# MLOps-Lab

./: .cruft.json  .gitignore  README.md  config.yml  config_test.yml  conftest.py  dataprep.py  environment.yml  main.py  mkdocs.yml  pyproject.toml  recsys.code-workspace  requirements.txt  setup.cfg
config/dev/: database.yml  logging.yml
config/prod/: database.yml  logging.yml
config/test/: database.yml  logging.yml
docs/: api_docs.md
jbook/: _config.yml  _toc.yml  build.sh  notebooks.ipynb  prep_notebooks.py  references.bib
mlops_lab/: __init__.py  __main__.py  container.py
mlops_lab/core/: __init__.py
mlops_lab/core/dal/: container.py  dao.py  dba.py  dto.py  oao.py
mlops_lab/core/database/: base.py  container.py  object.py  relational.py
mlops_lab/core/entity/: base.py  dataset.py  datasource.py  file.py
mlops_lab/core/factory/: base.py  container.py  dag.py  dataset.py  datasource.py  event.py
mlops_lab/core/repo/: base.py  container.py  context.py  dag.py  dataset.py  datasource.py  uow.py  (+1 more)
notebooks/: 00_data_eda.ipynb  01_data_eda.ipynb  01_preprocess.ipynb  02_preprocess.ipynb  03_scoring.ipynb  90_profiler.ipynb  99_lab.ipynb
notes/: Entities.xlsx  objects.py
recsys/: __init__.py  __main__.py  config.py  container.py  containers.py  load_tables.py
recsys/config/: base.py  cf.yml  collabfilter.py  data.py  etl.yml  log.py  visual.py  workflow.py
recsys/core/: __init__.py
recsys/setup/: config.yml  datasources.yml  load.py  reset_db.py
scripts/database/: create_db.sql  homedir.sh  processes.sh  restart.sh  root_pwd.sql  setup.sh  stop.sh
scripts/frameworks/: pachyderm.sh
setup/database/: build.sh  killall.sh  prompt.sh  start.sh
tests/: config.yml  conftest.py  containers.py  pytest_run.ipynb  test_containers.py  test_main.py  tests.log.2022-12-03  tests.log.2022-12-04  tests.log.2022-12-05  tests.log.2022-12-07
tests/config/: etl.yaml  process.yaml
tests/logs/: recsys.log.2022-12-24
tests/test_collabfilter/: test_dataprep.py  test_etl.py  test_process.py
tests/test_collaborative_filtering/: test_etl.py  test_process.py
tests/test_config/: test_base.py
tests/test_di/: test_containers.py
wandb/: latest-run
wandb/run-20221118_124839-1owhehov/: run-1owhehov.wandb
wandb/run-20221123_163046-gfyzpzpt/: run-gfyzpzpt.wandb
wandb/run-20221123_231232-2hqqitm0/: run-2hqqitm0.wandb
wandb/run-20221123_231838-35vcjwdb/: run-35vcjwdb.wandb
wandb/run-20221123_232026-2v5ub1o6/: run-2v5ub1o6.wandb
(+294 files in other folders)
